Added a tag to a favorited item

--- a/app/assets/stylesheets/components/_crop_card.scss
+++ b/app/assets/stylesheets/components/_crop_card.scss
@@ -5,6 +5,12 @@
   background-color: $mint;
   border-radius: 16px;
   margin: 8px 0;
+
+  small {
+    position: absolute;
+    top: 85px;
+    right: 16px;
+  }
 }
 
 .crop-index-card-body {
