--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,12 +8,15 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <li class="nav-item">
-          <%= link_to "Create a Garden", new_garden_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "My Gardens", current_user.gardens.any? ? gardens_path : new_garden_path, class: "nav-link" %>
-        </li>
+        <% if current_user.gardens.exists?%>
+          <li class="nav-item">
+            <%= link_to "My Gardens", current_user.gardens.any? ? gardens_path : new_garden_path, class: "nav-link" %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Create a Garden", new_garden_path, class: "nav-link" %>
+          </li>
+        <% end %>
         <li class="nav-item">
           <%= link_to "All Crops", crops_path, class: "nav-link" %>
         </li>
