Update style components. Change weather widget styling.

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,6 +2,8 @@
 @import "alert";
 @import "avatar";
 @import "banner";
+@import "button";
+@import "card";
 @import "crop_card";
 @import "crop_favorite";
 @import "container";
