--- a/app/views/gardens/index.html.erb
+++ b/app/views/gardens/index.html.erb
@@ -3,7 +3,7 @@
     <div class="garden-card">
       <div class="garden-card-header">
         <div class="garden-card-title">
-          <h2><%= garden.location %> Garden</h2>
+          <h2><%= garden.location.capitalize %> Garden</h2>
         </div>
         <p><%= number_with_precision(garden.height, strip_insignificant_zeros: true) %>  x <%= number_with_precision(garden.width, strip_insignificant_zeros: true) %> meters</p>
         <p><%= 100 - (((garden.tiles.where.not(plot_id: nil).count) * 100) / garden.tiles.count) %>% of unplanted space</p>
