--- a/app/views/crops/index.html.erb
+++ b/app/views/crops/index.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
-  <div data-controller="filter-crops">
-    <%= form_with url: crops_path, method: :get, html: { class: 'mb-4 input-group', data: { filter_cropes_target: 'form', action: "submit->filter-crops#update" } } do |f| %>
-      <%= f.text_field :query,
+  <%= form_with url: crops_path, method: :get, html: { class: 'mb-4 input-group', data: { filter_cropes_target: 'form', action: "submit->filter-crops#update" } } do |f| %>
+    <%= f.text_field :query,
                         class: "form-control",
                         placeholder: 'city',
                         value: params[:query],
@@ -9,13 +8,14 @@
                           filter_cropes_target: "searchInput"
                         }
                         %>
-      <%= button_tag(class: "btn btn-primary") do %>
-        <i class="fas fa-search"></i>
-      <% end %>
+    <%= button_tag(class: "btn btn-primary") do %>
+      <i class="fas fa-search"></i>
     <% end %>
-    <% if current_user.favorites_by_type('Crop').any? %>
-      <%= link_to 'Plant Seeds', new_garden_path, class: "btn btn-primary w-100 sticky-top" %>
-    <% end %>
+  <% end %>
+  <% if current_user.favorites_by_type('Crop').any? %>
+    <%= link_to 'Plant Seeds', new_garden_path, class: "btn btn-primary w-100 sticky-top" %>
+  <% end %>
+  <div data-controller="mark-crops">
     <%= render 'crop', crops: @crops %>
   </div>
 </div>
