--- a/app/views/crops/show.html.erb
+++ b/app/views/crops/show.html.erb
@@ -1,44 +1,44 @@
-<div class="crop-show-card-body">
+<div class="card-crops-show-body">
   <%= link_to crops_path do %>
-    <div class="crop-show-return-container">
+    <div class="card-crops-show-return-link">
       <i class="far fa-arrow-alt-circle-left"></i>
     </div>
   <% end %>
-  <div class="crop-show-card">
+  <div class="card-crops-show">
     <h1><%= @crop.name %></h1>
-    <div class="crop-img-container">
+    <div class="card-crops-show-img">
       <%= image_tag @crop.image_url %>
     </div>
-    <div class="crop-plant-family-container">
+    <div class="card-crops-show-plant-family">
       <h5>Plant Family: </h5>
       <p><em><%= @crop.plant_family %></em></p>
     </div>
-    <div class="crop-description-container">
+    <div class="card-crops-show-description">
       <h5>Description: </h5>
       <p><%= @crop.description %></p>
     </div>
     <%#= put recommended stuff together in another color %>
     <%#= add the recommended sowing months as well %>
-    <div class="crop-white-container">
+    <div class="card-crops-show-white-container">
       <h5>Needs</h5>
-      <div class="crop-bottom-details-container">
+      <div class="card-crops-show-bottom-details">
         <p>Water:</p>
         <p>Every <%= @crop.water_needs %> days</p>
       </div>
-      <div class="crop-bottom-details-container">
+      <div class="card-crops-show-bottom-details">
         <p>Nitrogen:</p>
         <p><%= @crop.nitrogen_needs %></p>
       </div>
       <h5>Recommendations</h5>
-      <div class="crop-bottom-details-container">
+      <div class="card-crops-show-bottom-details">
         <p>Sun Exposure:</p>
         <p><%= @crop.sun_exposure %></p>
       </div>
-      <div class="crop-bottom-details-container">
+      <div class="card-crops-show-bottom-details">
         <p>Crop Spacing:</p>
         <p><%= @crop.spacing_in_cm %> cm</p>
       </div>
-      <div class="crop-bottom-details-container">
+      <div class="card-crops-show-bottom-details">
         <p>Sowing Months:</p>
         <p><%= @crop.sowing_months %></p>
       </div>
