Add A LOT of styling.

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,4 +1,11 @@
-.btn-gardens-new {
+.btn-gardens {
   width: 100%;
   margin-top: 8px;
+  font-weight: bold;
+}
+
+.btn-gardens-add-plot {
+  width: 100%;
+  background-color: $asparagus;
+  font-weight: bold;
 }
