--- a/app/assets/stylesheets/components/_garden_card.scss
+++ b/app/assets/stylesheets/components/_garden_card.scss
@@ -16,6 +16,7 @@
   background-size: cover;
   border-radius: 16px;
   padding: 8px 16px;
+  margin-top: 8px;
   h2 {
     color: $off-white;
     font-weight: bold;
@@ -34,5 +35,8 @@
   p {
     margin: 4px 8px;
   }
-
+  img {
+    width: 30px;
+    object-fit: contain;
+  }
 }
