--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,7 +21,7 @@
           <%= link_to "All Crops", crops_path, class: "nav-link" %>
         </li>
         <li class="nav-item active">
-          <%= link_to "Favorites Crops:  #{current_user.favorited_by_type('Crop').count}", favorite_crops_path, class: "nav-link" %>
+          <%= link_to "Favorites Crops (#{current_user.favorited_by_type('Crop').count})", favorite_crops_path, class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
           <%= image_tag "", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
