Fix crop#index card title margin.

--- a/app/assets/stylesheets/components/_crop_card.scss
+++ b/app/assets/stylesheets/components/_crop_card.scss
@@ -11,7 +11,7 @@
   margin: 8px 0;
 }
 
-.basket {
+.star {
   position: absolute;
   z-index: 2;
   top: 8px;
@@ -35,5 +35,5 @@
 }
 
 .crop-index-card-text {
-  margin-top: 8px;
+  margin-top: 32px;
 }
