Fix sticky button on crops#index.

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -9,3 +9,10 @@
   background-color: $asparagus;
   font-weight: bold;
 }
+
+//FIX THIS LATER!!!
+.btn-sticky-top {
+  position: sticky;
+  top: 78px;
+  z-index: 3;
+}
