--- a/app/views/crops/index.html.erb
+++ b/app/views/crops/index.html.erb
@@ -14,7 +14,7 @@
     <% end %>
   <% end %>
   <% if current_user.favorites_by_type('Crop').any? %>
-    <%= link_to 'Plant Seeds', new_garden_path, class: "btn btn-primary w-100 sticky-top" %>
+    <%= link_to 'Plant Seeds', new_garden_path, class: "btn btn-primary w-100 btn-sticky-top" %>
   <% end %>
   <div data-controller="mark-crops">
     <%= render 'crop', crops: @crops %>
