--- a/app/assets/stylesheets/components/_crop_card.scss
+++ b/app/assets/stylesheets/components/_crop_card.scss
@@ -1,14 +1,7 @@
-// For the crop#index cards
+// For the star on crop index
 
 .marked {
-  color: $burgundy;
-}
-
-.crop-index-card {
-  position: relative;
-  background-color: $mint;
-  border-radius: 16px;
-  margin: 8px 0;
+  color: $burgundy !important;
 }
 
 .star {
@@ -21,6 +14,19 @@
      font-size: 24px;
    }
 }
+
+// For the crop#index cards
+
+
+.crop-index-card {
+  position: relative;
+  background-color: $mint;
+  border-radius: 16px;
+  margin: 8px 0;
+}
+
+
+
 
 .crop-index-card-body {
   display: flex;
