--- a/app/views/crops/_crop.html.erb
+++ b/app/views/crops/_crop.html.erb
@@ -1,22 +1,18 @@
 <% @crops.each do |crop| %>
-  <div data-mark-crops-target="crop">
-    <div class="crop-index-card">
-      <%= link_to toggle_favorite_crop_path(crop), method: "POST" do %>
-        <%# <div class="basket" data-mark-crops-target="basket"> %>
-        <div class='star' style=<%= current_user.favorited?(crop) ? "color:#AE133B" : "color:#FAFAFA" %> data-action="click->mark-crops#mark">
-          <i class="fas fa-star"></i>
+  <div class="crop-index-card">
+    <%= link_to toggle_favorite_crop_path(crop), remote: true, method: "POST" do %>
+      <div class="<%= current_user.favorited?(crop) ? "star marked" : "star" %>" data-action="click->mark-crops#mark">
+        <i class="fas fa-star"></i>
+      </div>
+    <% end %>
+    <div class="crop-index-card-body">
+      <div class="crop-index-card-text">
+        <h2><%= link_to crop.name, crop_path(crop) %></h2>
+        <p><%= crop.plant_family %></p>
+        <%= link_to crop_path(crop) do %>
         </div>
-        <%# </div> %>
-      <% end %>
-      <div class="crop-index-card-body">
-        <div class="crop-index-card-text">
-          <h2><%= link_to crop.name, crop_path(crop) %></h2>
-          <p><%= crop.plant_family %></p>
-          <%= link_to crop_path(crop) do %>
-          </div>
-          <%= image_tag crop.image_url %>
-        </div>
-      <% end %>
-    </div>
+        <%= image_tag crop.image_url %>
+      </div>
+    <% end %>
   </div>
 <% end %>
