--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -1,25 +1,27 @@
 <%= render "gardens/weather" %>
 
 <div class="container" data-controller="tile-container">
-  <div class="garden" style="grid-template-columns: repeat(<%= (@garden.width * 2).to_i %>, 60px)">
-    <% @tiles.each do |tile| %>
-      <div class="tile" id="<%= tile.id %>" data-plot-id="<%= tile.plot_id %>" data-tile-container-target="tile" data-action='click->tile-container#changeClass'>
-        <% if tile.plot_id.present? %>
-          <%= image_tag tile.plot.crop.image_url %>
-        <% end %>
-      </div>
-    <% end %>
-  </div>
-  <div class="form-container-gardens">
-    <div class="btn btn-gardens-add-plot" data-tile-container-target="link" data-action='click->tile-container#displayForm'>Add crops to plot</div>
-  </div>
-  <div class="d-none form-container-gardens" data-tile-container-target="form">
-    <%= simple_form_for [@garden, @plot] do |f| %>
-      <%= f.input :name %>
-      <%= f.input :crop, as: :select, collection: @favorites, label: "Selected crops" %>
-      <%= f.input :tiles, :as => :hidden, :input_html => { data: { "tile-container-target": "input" } } %>
-      <%#= NEED TO ADD FAVORITED CROPS HERE %>
-      <%= f.submit "Create plot", class: 'btn btn-primary btn-gardens' %>
-    <% end %>
+  <div class ="container-garden-perspective">
+    <div class="garden" style="grid-template-columns: repeat(<%= (@garden.width * 2).to_i %>, 60px)">
+      <% @tiles.each do |tile| %>
+        <div class="tile" id="<%= tile.id %>" data-plot-id="<%= tile.plot_id %>" data-tile-container-target="tile" data-action='click->tile-container#changeClass'>
+          <% if tile.plot_id.present? %>
+            <%= image_tag tile.plot.crop.image_url %>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+    <div class="form-container-gardens">
+      <div class="btn btn-gardens-add-plot" data-tile-container-target="link" data-action='click->tile-container#displayForm'>Add crops to plot</div>
+    </div>
+    <div class="d-none form-container-gardens" data-tile-container-target="form">
+      <%= simple_form_for [@garden, @plot] do |f| %>
+        <%= f.input :name %>
+        <%= f.input :crop, as: :select, collection: @favorites, label: "Selected crops" %>
+        <%= f.input :tiles, :as => :hidden, :input_html => { data: { "tile-container-target": "input" } } %>
+        <%#= NEED TO ADD FAVORITED CROPS HERE %>
+        <%= f.submit "Create plot", class: 'btn btn-primary btn-gardens' %>
+      <% end %>
+    </div>
   </div>
 </div>
