trying to get prefectures to plots

--- a/app/views/gardens/_default_weather.html.erb
+++ b/app/views/gardens/_default_weather.html.erb
@@ -3,7 +3,7 @@
     <h3><%= @garden.location %></h3>
     <%= image_tag("default_weather.png") %>
     <div class="container-temp-info">
-      <small>location uknnown</small>
+      <small>Location not found</small>
     </div>
   </div>
 </div>
