--- a/app/views/gardens/show.js.erb
+++ b/app/views/gardens/show.js.erb
@@ -1,1 +1,1 @@
-document.getElementById("selected-tile").innerHTML = "<%= @tile.plot_id ? @tile.plot_id : @tile.id %>"
+document.getElementById("selected-tile").innerHTML = "<%= @tile.plot_id ? (j render 'plot', tile: @tile) : (j render 'tile', tile: @tile) %>"
