--- a/app/views/gardens/_plot.js.erb
+++ b/app/views/gardens/_plot.js.erb
@@ -1,5 +1,5 @@
-<div class='card-plot'>
-  <p><%= tile.plot.crop.name %></p>
+<div class="card-plot">
   <%= image_tag(tile.plot.crop.image_url) %>
-  <p><%= pluralize(tile.plot.crop.min_days_to_harvest - (Date.today.to_date - tile.plot.created_at.to_date).to_i, 'days') %>  till harvest</p>
+  <p><%= tile.plot.crop.name %></p>
+  <p><%= pluralize(tile.plot.crop.min_days_to_harvest - (Date.today.to_date - tile.plot.created_at.to_date).to_i, 'days') %> till harvest</p>
 </div>
