Added alphabetical sort to recomended crops

--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -13,7 +13,7 @@
     </div>
     <div class="d-none form-container-gardens" data-tile-container-target="form">
       <%= simple_form_for [@garden, @plot] do |f| %>
-        <%= f.input :crop, as: :select, collection: @favorites + @hardiness_recommendation, label: "Selected crops & Recommendations (by Location & Season)" %>
+        <%= f.input :crop, as: :select, collection: (@favorites + @hardiness_recommendation).sort { |a, b| a.name<=>b.name }, label: "Selected crops & Recommendations (by Location & Season)" %>
         <%= f.input :tiles, :as => :hidden, :input_html => { data: { "tile-container-target": "input" } } %>
         <%= f.submit "Create plot", class: 'btn btn-primary btn-gardens' %>
       <% end %>
@@ -37,6 +37,8 @@
       <% end %>
     </div>
   </div>
-  <div id="selected-tile" data-tile-container-target="plot">
+  <div class="d-flex justify-content-center">
+    <div id="selected-tile" data-tile-container-target="plot">
+    </div>
   </div>
 </div>
