--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -7,7 +7,7 @@
   <div class ="container-garden-perspective">
     <div class="garden" style="grid-template-columns: repeat(<%= (@garden.width * 2).to_i %>, 60px)">
       <% @tiles.each do |tile| %>
-        <div class="tile" id="<%= tile.id %>" data-plot-id="<%= tile.plot_id %>" data-tile-container-target="tile" data-action='click->tile-container#changeClass'>
+        <div class="tile" id="<%= tile.id %>" data-plot-id="<%= tile.plot_id %>" data-crop-name="<%= tile.plot.crop.name if tile.plot_id.present? %>" data-tile-container-target="tile" data-action='click->tile-container#changeClass'>
           <% if tile.plot_id.present? %>
             <%= image_tag tile.plot.crop.image_url %>
             <% if tile.plot.crop.water_needs >= tile.plot.days_since_watering %>
