--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -5,20 +5,24 @@
     <% else %>
       <%= render "gardens/default_weather" %>
     <% end %>
-  </div>
-  <small id="unselected-tile" class="text-center">Select the tile</small>
-  <div>
-    <div class="form-container-gardens d-none" data-tile-container-target="button">
-      <div class="btn btn-gardens-add-plot" data-tile-container-target="link" data-action='click->tile-container#displayForm'>Add crops to plot</div>
+    <div class="card-weather">
+      <small id="unselected-tile" class="text-center">Select the tile</small>
+      <div class="d-flex justify-content-center">
+      <%# Where the plot will is rendered %>
+        <div id="selected-tile" data-tile-container-target="plot"></div>
+      </div>
+      <div class="d-none form-container-gardens" data-tile-container-target="form">
+        <%= simple_form_for [@garden, @plot] do |f| %>
+          <%= f.input :crop, as: :select, collection: (@favorites + @hardiness_recommendation).sort { |a, b| a.name<=>b.name }, label: "Recommended" %>
+          <%= f.input :tiles, :as => :hidden, :input_html => { data: { "tile-container-target": "input" } } %>
+          <%= f.submit "Create plot", class: 'btn btn-primary btn-gardens' %>
+        <% end %>
+      </div>
     </div>
-    <div class="d-none form-container-gardens" data-tile-container-target="form">
-      <%= simple_form_for [@garden, @plot] do |f| %>
-        <%= f.input :crop, as: :select, collection: (@favorites + @hardiness_recommendation).sort { |a, b| a.name<=>b.name }, label: "Selected crops & Recommendations (by Location & Season)" %>
-        <%= f.input :tiles, :as => :hidden, :input_html => { data: { "tile-container-target": "input" } } %>
-        <%= f.submit "Create plot", class: 'btn btn-primary btn-gardens' %>
-      <% end %>
-    </div>
   </div>
+
+
+
   <div class ="container-garden-perspective">
     <div class="garden" style="grid-template-columns: repeat(<%= (@garden.width * 2).to_i %>, 60px)">
       <% @tiles.each do |tile| %>
@@ -35,10 +39,6 @@
           </div>
         <% end %>
       <% end %>
-    </div>
-  </div>
-  <div class="d-flex justify-content-center">
-    <div id="selected-tile" data-tile-container-target="plot">
     </div>
   </div>
 </div>
