I think pwa working....

--- a/app/assets/config/manifest.json.erb
+++ b/app/assets/config/manifest.json.erb
@@ -1,6 +1,6 @@
 {
   "background_color": "white",
-  "description": "Nouyuu is Europe's best coding bootcamp for creative people & entrepreneurs. Learn to code in 9 weeks with our fullstack coding bootcamp.",
+  "description": "Nouyuu is gardening app for people interested in starting a new garden and manage it in a easy way.",
   "display": "fullscreen",
   "name": "Nouyuu",
   "icons": [
