--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -8,8 +8,8 @@
     <div class="card-weather">
       <small id="unselected-tile" class="text-center">Select the tile</small>
       <div class="d-flex justify-content-center">
-      <%# Where the plot will is rendered %>
-        <div id="selected-tile" data-tile-container-target="plot"></div>
+      <%# Tile/plot edit widget %>
+        <div id="selected-tile" data-tile-container-target="selected-plot"></div>
       </div>
       <div class="d-none form-container-gardens" data-tile-container-target="form">
         <%= simple_form_for [@garden, @plot] do |f| %>
@@ -20,24 +20,11 @@
       </div>
     </div>
   </div>
-
-
-
+  <%# Simulated garden %>
   <div class ="container-garden-perspective">
     <div class="garden" style="grid-template-columns: repeat(<%= (@garden.width * 2).to_i %>, 60px)">
       <% @tiles.each do |tile| %>
-        <%= form_with(url: garden_path(@garden), method: :get) do |f| %>
-          <%= f.hidden_field(:tile_id, value: tile.id) %>
-          <%= f.submit "Submit", class: 'd-none', data: { tile_id: "tile-#{tile.id}" } %>
-          <div class="tile" id="<%= tile.id %>" data-plot-id="<%= tile.plot_id %>" data-crop-name="<%= tile.plot.crop.name if tile.plot_id.present? %>" data-tile-container-target="tile" data-action='click->tile-container#changeClass'>
-            <% if tile.plot_id.present? %>
-              <%= image_tag tile.plot.crop.image_url %>
-              <% if tile.plot.crop.water_needs >= tile.plot.days_since_watering %>
-                <%= image_tag "droplet.png", class: "droplet" %>
-              <% end %>
-            <% end %>
-          </div>
-        <% end %>
+        <%= render "tile", tile: tile %>
       <% end %>
     </div>
   </div>
