--- a/app/views/gardens/index.html.erb
+++ b/app/views/gardens/index.html.erb
@@ -1,3 +1,6 @@
+<div class="card-nouyuu">
+  <%= link_to "Start a New Garden", new_garden_path, class: "btn-gardens" %>
+</div>
 <% @gardens.each do |garden| %>
   <%= link_to garden_path(garden) do %>
     <div class="card-gardens-index">
@@ -8,7 +11,6 @@
         <p><%= number_with_precision(garden.height, strip_insignificant_zeros: true) %>  x <%= number_with_precision(garden.width, strip_insignificant_zeros: true) %> meters</p>
         <p><%= 100 - (((garden.tiles.where.not(plot_id: nil).count) * 100) / garden.tiles.count) %>% of unplanted space</p>
       </div>
-      <%#= another container with a diff color %>
       <div class="card-gardens-index-details">
         <div class="card-gardens-index-title">
           <h5>Currently Growing:</h5>
