--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Create a Garden", new_garden_path, class: "nav-link" %>
+            <%= link_to "Start a Garden", new_garden_path, class: "nav-link" %>
           </li>
         <% end %>
         <li class="nav-item">
