changed wording and added an h4

--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -6,7 +6,7 @@
       <%= render "gardens/default_weather" %>
     <% end %>
     <div class="card-weather">
-      <small id="unselected-tile" class="text-center">Select the tile</small>
+      <h4><small id="unselected-tile" class="text-center">Select a tile</small></h4>
       <div class="d-flex justify-content-center">
       <%# Tile/plot edit widget %>
         <div id="selected-tile" data-tile-container-target="selected-plot"></div>
