--- a/app/views/gardens/_tile.html.erb
+++ b/app/views/gardens/_tile.html.erb
@@ -5,7 +5,7 @@
     <% if tile.plot_id.present? %>
       <%= image_tag tile.plot.crop.image_url %>
       <% if tile.plot.crop.water_needs >= tile.plot.days_since_watering %>
-        <%= image_tag "droplet.png", class: "droplet" %>
+        <%= image_tag "droplet.png", class: "droplet", data: { plot_need_water_id: "drop-#{tile.plot.id}"} %>
       <% end %>
     <% end %>
   </div>
