Added toggle favorite to the crops show page

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -72,6 +72,11 @@ color: $burgundy !important;
   }
 }
 
+.favorite-star-show {
+  position: absolute;
+  left: 295px;
+}
+
 .card-crops-show {
   position: relative;
   padding: 0px 16px;
