--- a/app/views/gardens/index.html.erb
+++ b/app/views/gardens/index.html.erb
@@ -5,15 +5,15 @@
   <%= link_to garden_path(garden) do %>
     <div class="card-gardens-index">
       <div class="card-gardens-index-header">
-        <div class="card-gardens-index-title">
+        <div class="text-center">
           <h2><%= garden.location.split(',')[0].capitalize  %> Garden</h2>
         </div>
         <p><%= number_with_precision(garden.height, strip_insignificant_zeros: true) %>  x <%= number_with_precision(garden.width, strip_insignificant_zeros: true) %> meters</p>
         <p><%= 100 - (((garden.tiles.where.not(plot_id: nil).count) * 100) / garden.tiles.count) %>% of unplanted space</p>
       </div>
       <div class="card-gardens-index-details">
-        <div class="card-gardens-index-title">
-          <h5>Currently Growing:</h5>
+        <div class="text-center">
+          <h3>Currently Growing:</h3>
         </div>
         <% garden.plots.each do |plot| %>
           <div class="d-flex">
