no autocomplete but functional search bar

--- a/app/views/crops/_search_bar_crops.html.erb
+++ b/app/views/crops/_search_bar_crops.html.erb
@@ -5,5 +5,5 @@
     data: { behavior: "autocomplete" },
     placeholder: "Find your crops by name..."
   %>
-  <%= submit_tag "Search", class: "btn btn-primary" %>
+  <%= submit_tag "Search", class: "btn btn-primary w-100" %>
 <% end %>
